--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "pnpm": {
     "overrides": {
+      "braces": ">=3.0.3",
       "decode-uri-component": "^0.2.2",
       "loader-utils": "^2",
       "minimist": "^1.2.6",
